allprojects {

	repositories {
		mavenCentral()
	}

	apply plugin: 'java'
	apply plugin: 'eclipse'
	apply plugin: 'idea'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	idea {
		module {
			jdkName = 21
		}
	}

	version = '1.0.0'

}
